k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: landing-page
  namespace: pnt-quiz
  labels:
    app: landing-page
spec:
  replicas: 1
  selector:
    matchLabels:
      app: landing-page
      tier: frontend
  template:
    metadata:
      labels:
        app: landing-page
        tier: frontend
    spec:
      containers:
        - name: landing-page
          image: richardyuwana/frontend-app:latest
          imagePullPolicy: Always
